# LHDC-V5-Decoder

./: CMakeLists.txt  README.md  idf_component.yml
a2dp_integration/: a2dp_vendor_lhdcv5.c  a2dp_vendor_lhdcv5.h  a2dp_vendor_lhdcv5_constants.h  a2dp_vendor_lhdcv5_decoder.c  a2dp_vendor_lhdcv5_decoder.h
decoder/: imdct_const_tables.inc  lhdc_bit_reader.c  lhdc_bit_reader.h  lhdc_dec.c  lhdc_dec.h  lhdc_dec_internal.h  lhdc_diag_config.c  lhdc_diag_config.h  lhdc_entropy_dec.c  lhdc_entropy_dec.h  lhdc_imdct.c  lhdc_imdct.h  lhdc_sns_synth.c  lhdc_sns_synth.h  lhdc_tables.c  lhdc_tables.h
docs/: README_CHANNEL_SELECTOR_DIAG.md  README_FIXES_96K_192K.md  README_LOW_FREQ_DIAG.md  README_RUNTIME_DIAG_ONE_FLASH.md  README_SHIFTED_OLA_FIX.md
test/: fac_roundtrip.c  lhdc_roundtrip.c  roundtrip_pr.py  test_roundtrip.py
